tests/fail/provenance/ptr_invalid.stderr
error: Undefined Behavior: dereferencing pointer failed: $HEX is not a valid pointer
  --> $DIR/ptr_invalid.rs:LL:CC
   |
LL |     let _val = unsafe { *xptr_invalid };
   |                         ^^^^^^^^^^^^^ dereferencing pointer failed: $HEX is not a valid pointer
   |
   = help: this indicates a bug in the program: it performed an invalid operation, and caused Undefined Behavior
   = help: see https://doc.rust-lang.org/nightly/reference/behavior-considered-undefined.html for further information
   = note: backtrace:
   = note: inside `main` at $DIR/ptr_invalid.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

